package main.java;

public class Page {
  //
}
